k8s-dr-main/Project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-service-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: portforge-api
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:023490709500:certificate/a3ba126a-a642-41a0-b83a-f26ba202e6ff
    alb.ingress.kubernetes.io/subnets: subnet-0e6a90b53897142fc, subnet-0e076e9182ac358ad
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /projects # 프로젝트 서비스 경로 (중복 금지!)
        pathType: Prefix
        backend:
          service:
            name: project-service
            port:
              number: 8001
      - path: /enriched # MSA 통합 API (AI 분석 포함)
        pathType: Prefix
        backend:
          service:
            name: project-service
            port:
              number: 8001
